Toggle conversations when writing a message

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -88,7 +88,9 @@ label {
     display: flex;
   }
 
-  input:focus {
+  input:focus,
+  select:focus,
+  textarea:focus {
     outline: none;
   }
 }
