--- a/app/assets/stylesheets/components/_tabnav.scss
+++ b/app/assets/stylesheets/components/_tabnav.scss
@@ -7,6 +7,7 @@
   z-index: 1;
 
   .tabnav-item {
+    position: relative;
     color: $inverse-font-color;
     font-weight: bold;
     font-size: $medium-font-size;
