--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,6 +77,15 @@
     </div>
   </div>
 
+  <!-- TODO: ask back-ends -->
+  <% unreadNum = 0 %>
+  <% @conversations.each do |c| %>
+    <% unread = c.receipts_for(current_user).map{|m| m.is_unread?}.include? true %>
+    <% if unread %>
+      <% unreadNum = unreadNum + 1 %>
+    <% end %>
+  <% end %>
+
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
@@ -90,6 +99,9 @@
                   remote: true,
                   data: { datatype: filter }
                 %>
+                <% if filter === 'messages' %>
+                  <div id="<%= filter + '-badge' %>" class="c-badge"><%= unreadNum %></div>
+                <% end %>
               </li>
             <% end %>
           </ul>
