--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -2,9 +2,25 @@
   'use strict'
   <% template = @current_type == 'network' ? "network" : "#{@current_type}/list" %>
 
+
+
   var htmlContent = "<%= escape_javascript render(partial: template, locals: { items: @items, more: @more }) %>";
 
   document.getElementById('content').innerHTML = htmlContent;
 
+  if ('<%= @current_type %>' === 'messages') {
+    //TODO: ask back-ends
+    <% unreadNum = 0 %>
+    <% @conversations.each do |c| %>
+      <% unread = c.receipts_for(current_user).map{|m| m.is_unread?}.include? true %>
+      <% if unread %>
+        <% unreadNum = unreadNum + 1 %>
+      <% end %>
+    <% end %>
+
+    document.getElementById('messages-badge').innerHTML = '<%= unreadNum %>';
+  }
+
   App.trigger('Remote:load', { data: '<%= @current_type %>' });
+
 })();
