Change badge value in every tab change

--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -8,7 +8,7 @@
 
   document.getElementById('content').innerHTML = htmlContent;
 
-  if ('<%= @current_type %>' === 'messages') {
+  if (true) {
     //TODO: ask back-ends
     <% unreadNum = 0 %>
     <% @conversations.each do |c| %>
