--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -1,4 +1,5 @@
 <% if items && items.size() > 0 %>
+  <% controller_name = controller.controller_name %>
   <div class="row collapse">
     <% items.each do |e| %>
       <div class="column small-12 medium-4">
@@ -14,6 +15,12 @@
           <% end %>
           <h2><%= link_to e.title, event_path(e.id) %></h2>
           <p><%= truncate(e.description.html_safe, :length => 300) %></p>
+
+          <% if controller_name === 'users' %>
+            <a href="/network/<%= current_user.id %>/events/<%= e.id %>/edit" class="c-btn -primary">
+              Edit
+            </a>
+          <% end %>
         </div>
       </div>
     <% end %>
