Edit user password form

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -99,6 +99,7 @@ label {
   display: block;
   font-size: $small-font-size;
   margin-top: 5px;
+  font-style: italic;
 }
 
 .form-actions .column {
