--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -47,4 +47,12 @@
 
 <% end %>
 
+<div class="form-row row">
+  <div class="column small-12 medium-5 medium-offset-1">
+    <ul class="c-shared-links">
+      <li><%= link_to "Change password", edit_user_registration_path %></li>
+    </ul>
+  </div>
+</div>
+
 <%= javascript_include_tag Ckeditor.cdn_url %>
