--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,14 +46,14 @@
                 <% if user.twitter_account && user.twitter_account != '' %>
                   <li>
                     <a href="https://twitter.com/<%= user.twitter_account %>" class="-clickable -hv" target="_blank">
-                      @<%= user.twitter_account %>
+                      Twitter
                     </a>
                   </li>
                 <% end %>
                 <% if user.linkedin_account && user.linkedin_account != '' %>
                   <li>
                     <a href="https://www.linkedin.com/in/<%= user.linkedin_account %>" class="-clickable -hv" target="_blank">
-                      <%= user.linkedin_account %>
+                      Linkedin
                     </a>
                   </li>
                 <% end %>
