--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,27 +1,54 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+<div class="c-project-form">
+  <div class="wrapper">
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <h2>Edit account</h2>
+      </div>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <div class="form-row row">
+        <div class="column small-12 medium-5 medium-offset-1">
+          <%= f.input :email, required: true, autofocus: true %>
+        </div>
+        <div class="column small-12 medium-5">
+          <%= f.input :password, autocomplete: "off", hint: "Leave it blank if you don't want to change it", required: false %>
+        </div>
+      </div>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+
+      <div class="form-row row">
+        <div class="column small-12 medium-5 medium-offset-1">
+          <%= f.input :password_confirmation, required: false %>
+        </div>
+        <div class="column small-12 medium-5">
+          <%= f.input :current_password, required: true %>
+        </div>
+      </div>
+
+
+      <div class="form-row row">
+        <div class="column small-12 medium-5 medium-offset-1">
+          <%= f.button :submit, "Update", class: 'c-btn -primary' %>
+        </div>
+      </div>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <div class="form-row row">
+      <div class="column small-12 medium-5 medium-offset-1">
+        <ul class="c-shared-links">
+          <li>
+            <h3>Cancel my account</h3>
+            <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+        </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
