--- a/app/views/projects/_info.html.erb
+++ b/app/views/projects/_info.html.erb
@@ -86,11 +86,11 @@
         <div class="sidebar-item">
           <h3><%= t 'location' %>(s)</h3>
           <ul class="c-list">
-            <% @project.addresses.each do |l| %>
-              <% country = Country.find_by_id(l.country_id) %>
-              <% iso = country ? country.country_iso_3 : nil %>
-              <% if iso %>
-                <li class="list-item -mg-less"><%= link_to "#{l.city}, #{l.country_name}", "/countries/#{iso}" %></li>
+            <% @addresses.each do |add| %>
+              <% if add[:country_iso_3] %>
+                <li class="list-item -mg-less"><%= link_to "#{add[:address].city}, #{add[:address].country_name}", "/countries/#{add[:country_iso_3]}" %></li>
+              <% else %>
+                <%= add[:address].city %>, <%= add[:address].country_name %>
               <% end %>
             <% end %>
         </div>
@@ -101,7 +101,7 @@
           <h3><%= t 'organization' %>(s)</h3>
           <ul class="c-list">
             <% @project.organizations.each do |o| %>
-              <li class="list-item -mg-less"><%= link_to o.name, "/organizations/#{o.id}" %></li>
+              <li class="list-item -mg-less"><%= link_to o.name, "/organizations/#{o.slug}" %></li>
             <% end %>
           </ul>
         </div>
@@ -123,7 +123,7 @@
           <h3><%= t 'project_lead' %>(s)</h3>
           <ul class="c-list">
             <% @project.project_leads.each do |pl| %>
-              <li class="list-item -mg-less"><%= link_to pl.name, "/investigators/#{pl.id}" %></li>
+              <li class="list-item -mg-less"><%= link_to pl.name, "/investigators/#{pl.slug}" %></li>
             <% end %>
           </ul>
         </div>
@@ -134,7 +134,7 @@
           <h3><%= t 'collaborator' %>(s)</h3>
           <ul class="c-list">
             <% @project.secondary_investigators.each do |si| %>
-              <li class="list-item -mg-less"><%= link_to si.name, "/investigators/#{si.id}" %></li>
+              <li class="list-item -mg-less"><%= link_to si.name, "/investigators/#{si.slug}" %></li>
             <% end %>
           </ul>
         </div>
