--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -5,12 +5,12 @@
       <div class="column small-12 medium-4">
         <div class="c-card -projects">
           <h3 class="-underlined">
-            <a href="/investigators/<%= p.project_leads.first.try(:id) %>">
+            <a href="/investigators/<%= p.project_leads.first.try(:slug) ? p.project_leads.first.try(:slug) : p.project_leads.first.try(:id) %>">
               <%= p.project_leads.first.try(:name) %>
             </a>
           </h3>
 
-          <h2><%= link_to p.title, project_path(p.id) %></h2>
+          <h2><%= link_to p.title, project_path(p.slug ? p.slug : p.id) %></h2>
 
           <p>
             <% p.cancer_types.each do |t| %>
