--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -13,7 +13,7 @@
               </a>
             </h3>
           <% end %>
-          <h2><%= link_to e.title, event_path(e.id) %></h2>
+          <h2><%= link_to e.title, event_path(e.slug ? e.slug : e.id) %></h2>
           <p><%= truncate(e.description.html_safe, :length => 300) %></p>
 
           <% if controller_name === 'users' %>
