--- a/app/views/data/_list.html.erb
+++ b/app/views/data/_list.html.erb
@@ -5,10 +5,10 @@
 <div class="wrapper">
   <div class="row collapse">
     <div class="column small-12 medium-8 large-8">
-      <div id="countryDataMap" class="c-map -relative"></div>
+      <div id="widgets-graph"> </div>
     </div>
     <div class="column small-12 medium-4 large-4">
-      <div id="countryDataLegendMap"></div>
+      <div id="widgets-select"> </div>
     </div>
   </div>
 </div>
