--- a/app/assets/javascripts/templates/graph.hbs
+++ b/app/assets/javascripts/templates/graph.hbs
@@ -1,7 +1,7 @@
 <div id="chart" class="c-graph">
   <div class="graph-header">
-    <h2>{{this.name}}</h2>
-    <h3>{{this.slug}}</h3>
+    <h2>{{this.info.name}}</h2>
+    <h3>{{this.info.slug}}</h3>
     <!-- <div class="legend">
       <ul>
         <li class="text -graph-legend -current"><span></span> Current practices</li>
