--- a/app/views/investigators/show.js.erb
+++ b/app/views/investigators/show.js.erb
@@ -5,9 +5,11 @@
   <% template = @current_type == 'network' ? "users/network" : "#{@current_type}/list" %>
 
   var htmlContent = "<%= escape_javascript render(partial: template, locals: { items: @items, more: @more }) %>";
-  var htmlCounters = "<%= escape_javascript render(partial: 'map/counters') %>"
+  // var htmlCounters = "<%= escape_javascript render(partial: 'map/counters') %>"
 
   document.getElementById('content').innerHTML = htmlContent;
-  document.getElementById('counters').innerHTML = htmlCounters;
+  // document.getElementById('counters').innerHTML = htmlCounters;
+
+  App.trigger('Remote:load', { data: '<%= @current_type %>' });
 
 })();
