--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,9 @@
     <div class="wrapper">
       <div class="row collapse">
         <div class="column small-8">
-          <div class="c-avatar -big -ph -mg-bt"></div>
+          <div class="c-avatar -big -mg-bt">
+            <%= image_tag(user.avatar_url) %>
+          </div>
         </div>
       </div>
       <div class="row collapse">
