--- a/app/assets/javascripts/templates/graph.hbs
+++ b/app/assets/javascripts/templates/graph.hbs
@@ -1,13 +1,10 @@
-<div id="chart" class="c-graph">
-  <div class="graph-header">
-    <h2>{{this.info.name}}</h2>
-    <h3>{{this.info.slug}}</h3>
-    <!-- <div class="legend">
-      <ul>
-        <li class="text -graph-legend -current"><span></span> Current practices</li>
-        <li class="text -graph-legend -future"><span></span> Potential future</li>
-      </ul>
-    </div> -->
-  </div>
-  <div class="graph"></div>
+<div class="graph-header">
+  <h2>{{this.info.name}}</h2>
+  <!-- <div class="legend">
+    <ul>
+      <li class="text -graph-legend -current"><span></span> Current practices</li>
+      <li class="text -graph-legend -future"><span></span> Potential future</li>
+    </ul>
+  </div> -->
 </div>
+<div id="graph-box" class="c-graph"></div>
