--- a/app/views/data/_list.html.erb
+++ b/app/views/data/_list.html.erb
@@ -5,7 +5,7 @@
 <div class="wrapper">
   <div class="row collapse">
     <div class="column small-12 medium-8 large-8">
-      <div id="widgets-graph"> </div>
+      <div id="widgets-graph" class="c-graph"> </div>
     </div>
     <div class="column small-12 medium-4 large-4">
       <div id="widgets-select"> </div>
