--- a/app/assets/stylesheets/components/_graph.scss
+++ b/app/assets/stylesheets/components/_graph.scss
@@ -4,45 +4,55 @@
   padding: 0 50px 0 0;
   position: relative;
 
-  // .c3 {
-  //   line {
-  //     fill: none;
-  //     stroke: rgba($font-color-2, .3);
-  //   }
-  //
-  //   path {
-  //     fill: none;
-  //     stroke: rgba($font-color-2, .3);
-  //   }
-  //
-  //   g {
-  //     &.tick {
-  //       fill: rgba($font-color-2, .3);
-  //     }
-  //   }
-  //
-  //   // TOOLTIP
-  //   .c3-tooltip {
-  //     box-shadow: 0px 1px 6px 0 rgba($font-color-2, .5);
-  //
-  //     th {
-  //       padding: rem(10px) rem(8px) rem(5px);
-  //       color: rgba($font-color-2, .8);
-  //       background-color: $font-color-1;
-  //       font-weight: 500;
-  //       text-transform: capitalize;
-  //     }
-  //
-  //     tr {
-  //       border: none;
-  //     }
-  //
-  //     td {
-  //       padding: rem(5px) rem(10px);
-  //       border: none;
-  //     }
-  //   }
-  // }
+  .graph-header {
+    h2 {
+      margin: 0 0 20px;
+    }
+  }
+
+  .graph-box {
+
+  }
+
+  .c3 {
+    // line {
+    //   fill: none;
+    //   stroke: rgba($font-color-2, .3);
+    // }
+    //
+    // path {
+    //   fill: none;
+    //   stroke: rgba($font-color-2, .3);
+    // }
+    //
+    // g {
+    //   &.tick {
+    //     fill: rgba($font-color-2, .3);
+    //   }
+    // }
+
+    // TOOLTIP
+    .c3-tooltip {
+      box-shadow: $box-shadow-2;
+
+      th {
+        padding: 10px 8px 5px;
+        color: $base-font-color;
+        background-color: white;
+        font-weight: 500;
+        // text-transform: capitalize;
+      }
+
+      tr {
+        border: none;
+      }
+
+      td {
+        padding: 5px 10px;
+        border: none;
+      }
+    }
+  }
 }
 
 
