--- a/app/sql_queries/projects_map_points.sql.erb
+++ b/app/sql_queries/projects_map_points.sql.erb
@@ -35,6 +35,10 @@ from projects
       inner join cancer_types_projects on cancer_types_projects.project_id = projects.id
       inner join cancer_types on cancer_types_projects.cancer_type_id = cancer_types.id
     <% end %>
+    <% if @params[:specialities] %>
+      inner join projects_pecialities on projects_pecialities.project_id = projects.id
+      inner join specialities on projects_specialities.speciality_id = specialities.id
+    <% end %>
     <% if @params[:user] %>
       inner join project_users on projects.id = project_users.project_id
     <% end %>
@@ -56,6 +60,9 @@ from projects
     <% end %>
     <% if @params[:cancer_types] %>
       and cancer_types.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:specialities] %>
+      and specialities.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
     <% end %>
     <% if @params[:regions] %>
       and countries.region_iso in <%= @params[:regions].to_s.gsub('[', '(').gsub(']',')').gsub('"',"'") %>
