--- a/app/assets/stylesheets/components/_graph.scss
+++ b/app/assets/stylesheets/components/_graph.scss
@@ -15,19 +15,19 @@
   }
 
   .c3 {
-    // line {
-    //   fill: none;
-    //   stroke: rgba($font-color-2, .3);
-    // }
-    //
-    // path {
-    //   fill: none;
-    //   stroke: rgba($font-color-2, .3);
-    // }
-    //
+    line {
+      fill: none;
+      stroke: #a3b0b8;
+    }
+
+    path {
+      fill: none;
+      stroke: #a3b0b8;
+    }
+
     // g {
     //   &.tick {
-    //     fill: rgba($font-color-2, .3);
+    //     fill: #a3b0b8;
     //   }
     // }
 
