--- a/app/views/data/_list.html.erb
+++ b/app/views/data/_list.html.erb
@@ -3,13 +3,13 @@
 </div>
 
 <div class="wrapper">
-  <div class="c-data">
+  <div class="c-data -border">
     <div class="row collapse">
       <div class="column small-12 medium-8 large-8">
         <div id="widgets-graph" class="c-graph"> </div>
       </div>
       <div class="column small-12 medium-4 large-4">
-        <div>          
+        <div>
           <h2>Country information</h2>
           <div id="widgets-select"> </div>
         </div>
