--- a/app/sql_queries/projects_map_regions.sql.erb
+++ b/app/sql_queries/projects_map_regions.sql.erb
@@ -13,6 +13,9 @@ from projects
      <% if @params[:organizations] || @params[:organization_types] %>
       inner join organizations on addresses.organization_id = organizations.id
     <% end %>
+    <% if @params[:funding_sources] %>
+      inner join funders on funders.project_id = projects.id
+    <% end %>
     <% if @params[:organization_types] %>
       inner join organization_types on organization_types.id = organizations.organization_type_id
     <% end %>
@@ -40,6 +43,9 @@ from projects
     <% end %>
     <% if @params[:organizations] %>
       and organizations.id in <%= "#{'(' + @params[:organizations].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:funding_sources] %>
+      and funders.organization_id in <%= "#{'(' + @params[:funding_sources].join(',') + ')'}" %>
     <% end %>
     <% if @params[:organization_types] %>
       and organization_types.id in <%= "#{'(' + @params[:organization_types].join(',') + ')'}" %>
