--- a/app/sql_queries/people_map_points.sql.erb
+++ b/app/sql_queries/people_map_points.sql.erb
@@ -24,6 +24,9 @@ from investigators
     <% if @params[:organization_types] %>
       inner join organization_types on organization_types.id = organizations.organization_type_id
     <% end %>
+    <% if @params[:funding_sources] %>
+      inner join funders on funders.project_id = projects.id
+    <% end %>
     <% if @params[:project_types] %>
       inner join project_types_projects on project_types_projects.project_id = projects.id
       inner join project_types on project_types_projects.project_type_id = project_types.id
@@ -42,6 +45,9 @@ from investigators
     <% if @params[:organizations] %>
       and organizations.id in <%= "#{'(' + @params[:organizations].join(',') + ')'}" %>
     <% end %>
+    <% if @params[:funding_sources] %>
+      and funders.organization_id in <%= "#{'(' + @params[:funding_sources].join(',') + ')'}" %>
+    <% end %>
     <% if @params[:organization_types] %>
       and organization_types.id in <%= "#{'(' + @params[:organization_types].join(',') + ')'}" %>
     <% end %>
@@ -50,6 +56,13 @@ from investigators
     <% end %>
     <% if @params[:cancer_types] %>
       and cancer_types.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:specialities] %>
+      and specialities.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
+    <% end %>
+    <% if @params[:specialities] %>
+      inner join projects_pecialities on projects_pecialities.project_id = projects.id
+      inner join specialities on projects_specialities.speciality_id = specialities.id
     <% end %>
     <% if @params[:regions] %>
       and countries.region_iso in <%= @params[:regions].to_s.gsub('[', '(').gsub(']',')').gsub('"',"'") %>
