--- a/app/sql_queries/projects_map_download.sql.erb
+++ b/app/sql_queries/projects_map_download.sql.erb
@@ -28,12 +28,18 @@ from projects
       inner join projects_pecialities on projects_pecialities.project_id = projects.id
       inner join specialities on projects_specialities.speciality_id = specialities.id
   <% end %>
+  <% if @params[:funding_sources] %>
+      inner join funders on funders.project_id = projects.id
+  <% end %>
 where projects.status = 1
   <% if @params[:countries] %>
     and countries.country_iso_3 in <%= @params[:countries].to_s.gsub('[', '(').gsub(']',')').gsub('"',"'") %>
   <% end %>
   <% if @params[:organizations] %>
     and organizations.id in <%= "#{'(' + @params[:organizations].join(',') + ')'}" %>
+  <% end %>
+  <% if @params[:funding_sources] %>
+    and funders.organization_id in <%= "#{'(' + @params[:funding_sources].join(',') + ')'}" %>
   <% end %>
   <% if @params[:organization_types] %>
     and organization_types.id in <%= "#{'(' + @params[:organization_types].join(',') + ')'}" %>
