--- a/app/assets/stylesheets/components/_claim.scss
+++ b/app/assets/stylesheets/components/_claim.scss
@@ -4,6 +4,11 @@
   color: $inverse-font-color;
   background-color: $primary-color;
 
+  &.-primary {
+    background-color: $inverse-font-color;
+    color: $primary-color;
+  }
+
   h1 {
     font-size: $large-font-size;
     line-height: 1.2;
@@ -23,5 +28,48 @@
     letter-spacing: 1px;
 
     transform: translateY(100%);
+  }
+
+  ul {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0;
+    margin: 30px 0 0;
+
+    > li {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      list-style: none;
+      margin: 0 20px 0 0;
+      max-width: 200px;
+
+      &:last-child {
+        margin: 0;
+      }
+
+      > * {
+        margin: 0 0 0 20px;
+        &:first-child {
+          margin: 0;
+        }
+      }
+
+      .icon {
+        flex-shrink: 0;
+        width: 46px;
+        height: 46px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $primary-color;
+        border-radius: 50%;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
   }
 }
