--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,39 @@
 <% title 'Welcome' %>
 
+<section>
+  <div class="wrapper">
+    <div class="c-claim -primary">
+      <h1>Join the network</h1>
+      <ul class="claim-list">
+        <li>
+          <div class="icon">
+            <svg class="c-icon -big -inverse"><use xlink:href="#icon-download"></use></svg>
+          </div>
+          <p>Upload your projects</p>
+        </li>
+        <li>
+          <div class="icon">
+            <svg class="c-icon -big -inverse"><use xlink:href="#icon-download"></use></svg>
+          </div>
+          <p>Write a post</p>
+        </li>
+        <li>
+          <div class="icon">
+            <svg class="c-icon -big -inverse"><use xlink:href="#icon-download"></use></svg>
+          </div>
+          <p>Submit your events</p>
+        </li>
+        <li>
+          <div class="icon">
+            <svg class="c-icon -big -inverse"><use xlink:href="#icon-download"></use></svg>
+          </div>
+          <p>Contact other users and investigators</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 <section class="l-app -main -home -full">
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
