--- a/app/assets/javascripts/templates/investigator_data.hbs
+++ b/app/assets/javascripts/templates/investigator_data.hbs
@@ -1,13 +1,2 @@
 
-<div id="graph"></div>
-<style>
-    svg {
-      font: 10px sans-serif;
-    }
-
-    .link {
-      fill: none;
-      stroke: #ccc;
-      stroke-width: 1.5px;
-    }
-</style>
+<div id="graph" class="c-graph-investigator"></div>
