--- a/app/sql_queries/events_map_points.sql.erb
+++ b/app/sql_queries/events_map_points.sql.erb
@@ -3,6 +3,10 @@ events.id as event,
 events.title as title,
 events.start_date as start_date,
 events.end_date as end_date,
+events.address as address,
+events.address2 as address2,
+events.city as city,
+events.state as state,
 countries.country_name as location_name,
 '{"type":"Point","coordinates":[' || events.latitude || ',' || events.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
@@ -26,4 +30,4 @@ where 1=1
 <% if @params[:user] %>
   and events.user_id = <%= quote @params[:user] %>
 <% end %>
-group by event, title, location_name, location_id, centroid, iso, start_date, end_date
+group by event, title, location_name, location_id, centroid, iso, start_date, end_date, address, address2, city, state
