Users: avatar form amendments

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,18 +4,18 @@
   method: :patch, html: { multipart: true } do |f| %>
 
   <div class="form-row row">
-    <div class="column small-12 medium-5">
-      <label>Profile picture url:</label>
-      <%= image_tag(@user.avatar_url) if @user.avatar? %>
-      <%= f.file_field :avatar, label: false %>
-    </div>
-  </div>
-
-  <div class="form-row row">
     <div class="column small-12">
       <div id="title">
       <%= f.input :name, placeholder: 'Name', label: false, input_html: { class: "c-title -bigger -bold"} %>
       </div>
+    </div>
+  </div>
+
+  <div class="form-row row">
+    <div class="column small-12 medium-5 medium-offset-1">
+      <h4 class="c-title">Profile picture url:</h4>
+      <%= image_tag(@user.avatar_url) if @user.avatar? %>
+      <%= f.file_field :avatar, label: false %>
     </div>
   </div>
 
