--- a/app/assets/stylesheets/components/graph_investigator.scss
+++ b/app/assets/stylesheets/components/graph_investigator.scss
@@ -1,7 +1,22 @@
 
 .c-graph-investigator {
-  svg {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%; /* aspect ratio */
+  vertical-align: top;
+  overflow: hidden;
+
+  svg.svg-content-responsive {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 0;
     font: 10px sans-serif;
+
+    > g {
+      width: 100% !important;
+    }
 
     .link {
       fill: none;
