Home: icons added to claim

--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -24,8 +24,8 @@
   }
 
   &.-primary { fill: $dark-sky-blue; }
-
   &.-inverse { fill: $body-bg-color; }
+  &.-inverse-stroke { stroke: rgba($body-bg-color, .5); }
 
   &.-hv-opac {
     &:hover {
