--- a/app/assets/stylesheets/components/_claim.scss
+++ b/app/assets/stylesheets/components/_claim.scss
@@ -15,7 +15,7 @@
     margin-bottom: 0;
   }
 
-  a {
+  .link {
     position: absolute;
     padding: $button-y-padding $button-x-padding;
     bottom: 0;
@@ -38,16 +38,20 @@
     margin: 30px 0 0;
 
     > li {
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
       list-style: none;
       margin: 0 20px 0 0;
-      max-width: 200px;
 
       &:last-child {
         margin: 0;
       }
+    }
+
+    .claim-link {
+      width: 200px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      color: $primary-color;
 
       > * {
         margin: 0 0 0 20px;
@@ -63,12 +67,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: $primary-color;
+        background: #007bcd;
         border-radius: 50%;
       }
 
       p {
         font-size: 16px;
+        line-height: 1.5;
       }
     }
   }
