--- a/app/assets/stylesheets/components/_claim.scss
+++ b/app/assets/stylesheets/components/_claim.scss
@@ -75,6 +75,16 @@
         font-size: 16px;
         line-height: 1.5;
       }
+
+      &:hover {
+        .icon {
+          background: darken(#007bcd, 5%);
+        }
+
+        p {
+          text-decoration: underline; 
+        }
+      }
     }
   }
 }
