Investigator graph legend

--- a/app/assets/stylesheets/components/graph_investigator.scss
+++ b/app/assets/stylesheets/components/graph_investigator.scss
@@ -44,7 +44,7 @@
       }
     }
 
-    .investigator {
+    .current {
       fill: $secondary-color;
 
       circle {
@@ -54,7 +54,7 @@
       }
     }
 
-    .projects {
+    .rects {
       text {
         fill: $inverse-font-color;
       }
