Contact form styles & notice modal

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -114,6 +114,12 @@ label {
   }
 }
 
+.hiddeable {
+  visibility: none;
+  position: absolute;
+  top: -1000px;
+}
+
 .required {
   font-size: $small-font-size;
   margin-top: 0;
@@ -125,4 +131,14 @@ label {
   margin-top: 0;
   padding-top: 0;
   color: red;
+}
+
+.alert {
+  ul {
+    @extend %clearlist;
+
+    font-size: $small-font-size;
+    color: red;
+    margin-bottom: $inline-space;
+  }
 }
