--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -29,6 +29,9 @@
             <li class="c-translate">
               <div id="googleTranslateGCPM"></div>
             </li>
+            <li class="c-translate">
+              <%= link_to 'Contact', new_contact_form_path %>
+            </li>
             <li id="userManualDownload">
               <%= link_to t('download'), download_user_manual_path,
                 download: 'user-manual', title: t('user-manual')
