Cancel redirect to home

--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -66,8 +66,8 @@
       <div class="form-actions">
         <div class="form-row row collapse">
           <div class="column small-12">
-            <%= link_to 'Cancel', :back, class: 'c-btn -secondary -inverse' %>
-            <%= f.submit 'Send', class: 'c-btn -secondary', data: {disable_with: "Sending..."} %>
+            <%= link_to 'Cancel', home_path, class: 'c-btn -secondary -inverse' %>
+            <%= f.submit 'Send', class: 'c-btn -secondary', data: { disable_with: "Sending..." } %>
           </div>
         </div>
       </div>
