Investigator and country data tab working

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -71,7 +71,7 @@
   <% elsif @current_type == 'projects' %>
     <%= render 'projects/list', items: @items, more: @more %>
   <% elsif @current_type == 'data' %>
-    <%= render 'data/list'%>
+    <%= render 'data/countries'%>
   <% else @current_type %>
     <%= render 'investigators/list', items: @items, more: @more %>
   <% end %>
