--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -149,13 +149,12 @@
   }
 
   &.-icon {
-    width: 34px;
-    height: 34px;
     border-radius: 100%;
     padding: 0;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
+    padding: 5px;
 
     svg {
       display: block;
