--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -3,6 +3,11 @@
   width: 15px;
   height: 15px;
 
+  &.-tiny {
+    width: 10px;
+    height: 10px;
+  }
+
   &.-small {
     width: 12px;
     height: 12px;
