--- a/app/assets/javascripts/templates/legend.hbs
+++ b/app/assets/javascripts/templates/legend.hbs
@@ -11,7 +11,12 @@
 {{#if layer}}
 <ul class="layer-legend">
   <li>
-    <span class="name">{{layer.name}}</span>
+    <span class="name">
+      {{layer.name}} 
+      <button type="button" name="button" class="c-btn -secondary -icon -tiny js-btn-info">
+        <svg class="c-icon -tiny -inverse"><use xlink:href="#icon-info"></use></svg>
+      </button>
+    </span>
     {{#if layer.legend}}
       <ul class="legend">
         {{#each layer.legend.items}}
