--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -53,6 +53,12 @@
           <div id="funding-sources" class="c-select"></div>
         </div>
       </div>
+      <div class="row">
+        <div class="column small-12 medium-6">
+          <h4 class="c-title">Specialities</h4>
+          <div id="specialities" class="c-select"></div>
+        </div>
+      </div>
 
       <div id="investigatororganizationedit"></div>
 
