No info messages on layers info modal

--- a/app/assets/stylesheets/components/_legend.scss
+++ b/app/assets/stylesheets/components/_legend.scss
@@ -186,6 +186,10 @@
         font-size: $small-font-size;
         font-weight: $bold-font-weight;
         line-height: 1.25;
+
+        & button {
+          margin-left: 8px;
+        }
       }
 
       .legend {
