--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -9,7 +9,13 @@
           <%= f.error_notification %>
 
           <div class="form-row">
-            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :name, required: true, autofocus: true %>
+          </div>
+          <div class="form-row">
+            <%= f.input :email, required: true %>
+          </div>
+          <div class="form-row">
+            <%= f.input :avatar %>
           </div>
           <div class="form-row">
             <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
