--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -13,13 +13,13 @@
               </a>
             </h3>
           <% end %>
-          <h2><%= link_to e.title, event_path(e.slug ? e.slug : e.id) %></h2>
+          <h2><%= link_to e.title, event_path(e.slug_or_id) %></h2>
           <p><%= truncate(e.description.html_safe, :length => 300) %></p>
 
           <% if controller_name === 'users' %>
-            <a href="/network/<%= current_user.id %>/events/<%= e.id %>/edit" class="c-btn -primary">
-              Edit
-            </a>
+            <% if can? :update, e %>
+              <%= link_to 'Edit', edit_user_event_path(current_user.id, e.slug_or_id), class: 'c-btn -primary' %>
+            <% end %>
           <% end %>
         </div>
       </div>
