--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -14,9 +14,7 @@
           <p>
             <% p.cancer_types.each do |t| %>
               <span class="c-tag -mg">
-                <a href="/cancer-types/<%= t.slug %>">
-                  <%= t.name %>
-                </a>
+                <%= link_to t.name, cancer_path(t.slug_or_id) %>
               </span>
             <% end %>
           </p>
@@ -25,7 +23,7 @@
     <% end %>
   <% end %>
 
-  <% if @events && @events.size() > 0 %>
+  <% if @events.any? %>
     <% @events.each_with_index do |e, index| %>
       <div class="column small-12 medium-4">
         <div class="c-card -events <% if index == 0 %>-inverse<% end %>">
@@ -40,7 +38,7 @@
               <% end %>
             </h3>
           <% end %>
-          <h2><%= link_to e.title, event_path(e.id) %></h2>
+          <h2><%= link_to e.title, event_path(e.slug_or_id) %></h2>
           <p><%= truncate(e.description.html_safe, :length => 300) %></p>
         </div>
       </div>
