Search user styles

--- a/app/assets/stylesheets/layouts/_content.scss
+++ b/app/assets/stylesheets/layouts/_content.scss
@@ -11,6 +11,7 @@
 
   &.-no-br { border: 0; }
   &.-br-bottom { border-bottom: 1px solid $border-color-1; }
+  &.-no-top-padd { padding-top: 0; }
 
   .l-content-article {
     font-family: $base-font-family-light;
@@ -19,6 +20,10 @@
     &:last-child {
       padding-bottom: 0;
     }
+  }
+
+  &.-hidden {
+    display: none;
   }
 
 }
