--- a/app/assets/javascripts/templates/users_list.hbs
+++ b/app/assets/javascripts/templates/users_list.hbs
@@ -1,11 +1,11 @@
 
-<ul class="c-list">
+<ul class="c-list -row-items">
   {{#each items as |item|}}
     <li class="list-item">
       <div class="c-avatar -small -ph">
-        <img src="{{item.avatar.url}}">
+        <img src="{{item.photo}}">
       </div>
-      {{item.name}}
+      <a href="/network/{{item.id}}">{{item.name}}</a>
     </li>
   {{/each}}
 </ul>
