--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -33,18 +33,20 @@
 
   <div class="column row small-12 medium-4">
     <aside class="l-sidebar -no-pad">
+
       <div class="l-content -no-br wrapper">
-        <div id="search-input"></div>
-        <svg class="c-icon icon-search -medium -secondary">
-          <use xlink:href="#icon-search"></use>
-        </svg>
-        <svg class="c-icon icon-close -medium -secondary -hidden js-clear-search">
-          <use xlink:href="#icon-close"></use>
-        </svg>
+        <div class="c-input-row">
+          <div id="search-input"></div>
+          <svg class="c-icon icon-search -medium -secondary">
+            <use xlink:href="#icon-search"></use>
+          </svg>
+          <svg class="c-icon icon-close -medium -secondary -hidden js-clear-search">
+            <use xlink:href="#icon-close"></use>
+          </svg>
+        </div>
       </div>
-      <div class="wrapper">
-          <div id="search-list"></div>
-      </div>
+
+      <div id="search-list" class="l-content -no-br -no-top-padd wrapper -hidden"></div>
 
       <div class="l-content wrapper">
         <h2><%= t 'countries' %></h2>
