--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -11,7 +11,7 @@
     max-height: 300px;
     overflow: auto;
 
-    .list-item {
+    .list-item a {
       display: flex;
       align-items: center;
 
