--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -34,7 +34,7 @@
   <div class="column row small-12 medium-4">
     <aside class="l-sidebar -no-pad">
 
-      <div class="l-content -no-br wrapper">
+      <div id="userSearch" class="l-content -no-br wrapper">
         <div class="c-input-row">
           <div id="search-input"></div>
           <svg class="c-icon icon-search -medium -secondary">
