--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -14,3 +14,9 @@
 </section>
 
 <div id="search-list"></div>
+
+<div class="c-spinner -start">
+  <div class="spinner-box">
+    <div class="icon"></div>
+  </div>
+</div>
